# gp-saml-gui

./: .gitignore  gp-saml-gui.8  gp_saml_gui.py  pyproject.toml
recipe/: recipe.yaml
scripts/: global-install.nu
